[gd_scene load_steps=19 format=3 uid="uid://rua13xrlp8sd"]

[ext_resource type="Script" path="res://Scripts/SetInstallDir.gd" id="1_6gy2b"]
[ext_resource type="Script" path="res://Scripts/InstallHat.gd" id="2_04fpv"]
[ext_resource type="Theme" uid="uid://bnv70te3yjfob" path="res://Assets/MainTheme.tres" id="2_nfa6a"]
[ext_resource type="Script" path="res://Scripts/Pivot.gd" id="3_2y2td"]
[ext_resource type="Texture2D" uid="uid://ddxgoh13pl88q" path="res://Assets/Models/hexahedron_1ao.fezao.png" id="4_iur53"]
[ext_resource type="ArrayMesh" uid="uid://c7xucvd5gjmiu" path="res://Assets/Models/hexahedron_1ao.fezao.obj" id="5_3fxuk"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_8g3j8"]

[sub_resource type="Sky" id="Sky_up10x"]
sky_material = SubResource("PanoramaSkyMaterial_8g3j8")

[sub_resource type="Environment" id="Environment_r7hbt"]
background_mode = 1
background_color = Color(0.145098, 0.0901961, 0.203922, 1)
sky = SubResource("Sky_up10x")
ambient_light_color = Color(0, 0, 0, 0.211765)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p3066"]
albedo_texture = ExtResource("4_iur53")
metallic = 0.7
roughness = 0.61
texture_filter = 0

[sub_resource type="Animation" id="Animation_l8sq1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.785398, 3.14159, 0.785398)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_uyrm4"]
resource_name = "install"
length = 5.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.943176, -3.13761, 2.36383)]
}

[sub_resource type="Animation" id="Animation_xfyua"]
resource_name = "spin"
length = 5.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.418879, -7.15585, 1.11701), Vector3(0.418879, -0.872665, 1.11701)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 3.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.2, 0), Vector3(0, -0.2, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ck24r"]
_data = {
"RESET": SubResource("Animation_l8sq1"),
"install": SubResource("Animation_uyrm4"),
"spin": SubResource("Animation_xfyua")
}

[sub_resource type="Animation" id="Animation_vypv3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ukrhc"]
resource_name = "spin_loop"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="Animation" id="Animation_kxan3"]
resource_name = "spin_up"
length = 15.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 9, 12, 14, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0), Vector3(0, 12.5664, 0), Vector3(0, 18.8496, 0), Vector3(0, 25.1327, 0), Vector3(0, 31.4159, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ctwt1"]
_data = {
"RESET": SubResource("Animation_vypv3"),
"spin_loop": SubResource("Animation_ukrhc"),
"spin_up": SubResource("Animation_kxan3")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -33.0
offset_right = 250.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="InstallDir" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
script = ExtResource("1_6gy2b")

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/InstallDir"]
custom_minimum_size = Vector2(474, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_nfa6a")
placeholder_text = "Set Install Directory..."
editable = false

[node name="Browse" type="Button" parent="VBoxContainer/InstallDir"]
layout_mode = 2
theme = ExtResource("2_nfa6a")
text = "..."

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/InstallDir/Browse"]
title = "Open a Directory"
initial_position = 1
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="HATVersion" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
script = ExtResource("2_04fpv")

[node name="Refresh" type="Button" parent="VBoxContainer/HATVersion"]
layout_mode = 2
theme = ExtResource("2_nfa6a")
text = "Refresh"

[node name="Chooser" type="OptionButton" parent="VBoxContainer/HATVersion"]
custom_minimum_size = Vector2(354, 0)
layout_mode = 2
theme = ExtResource("2_nfa6a")

[node name="Install" type="Button" parent="VBoxContainer/HATVersion"]
layout_mode = 2
theme = ExtResource("2_nfa6a")
text = "Install!"

[node name="Log" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
focus_mode = 2
theme = ExtResource("2_nfa6a")
scroll_following = true
selection_enabled = true

[node name="Hexahedron" type="Node3D" parent="."]
script = ExtResource("3_2y2td")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Hexahedron"]
environment = SubResource("Environment_r7hbt")

[node name="Pivot" type="Node3D" parent="Hexahedron"]

[node name="Camera3D" type="Camera3D" parent="Hexahedron/Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
projection = 1
size = 13.0

[node name="Hexahedron1Ao_fezao" type="MeshInstance3D" parent="Hexahedron/Pivot"]
transform = Transform3D(-0.707106, 0.707108, 1.79264e-06, 0.5, 0.5, -0.707107, -0.500002, -0.499998, -0.707107, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_p3066")
mesh = ExtResource("5_3fxuk")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hexahedron/Pivot/Hexahedron1Ao_fezao"]
libraries = {
"": SubResource("AnimationLibrary_ck24r")
}
autoplay = "spin"
playback_default_blend_time = 1.0
speed_scale = 0.5

[node name="PivotAnim" type="AnimationPlayer" parent="Hexahedron/Pivot"]
libraries = {
"": SubResource("AnimationLibrary_ctwt1")
}
speed_scale = 2.0

[node name="Top Light" type="DirectionalLight3D" parent="Hexahedron"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6)
light_energy = 0.4
sky_mode = 1

[node name="Front Light" type="DirectionalLight3D" parent="Hexahedron"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6, 0)
light_energy = 0.4
sky_mode = 1

[connection signal="pressed" from="VBoxContainer/InstallDir/Browse" to="VBoxContainer/InstallDir" method="_on_browse_pressed"]
[connection signal="dir_selected" from="VBoxContainer/InstallDir/Browse/FileDialog" to="VBoxContainer/InstallDir" method="_on_file_dialog_dir_selected"]
[connection signal="installed" from="VBoxContainer/HATVersion" to="Hexahedron" method="_on_hat_version_installed"]
[connection signal="pressed" from="VBoxContainer/HATVersion/Refresh" to="VBoxContainer/HATVersion" method="_on_refresh_pressed"]
[connection signal="pressed" from="VBoxContainer/HATVersion/Install" to="VBoxContainer/HATVersion" method="_on_install_pressed"]
[connection signal="pressed" from="VBoxContainer/HATVersion/Install" to="Hexahedron" method="_on_install_pressed"]
[connection signal="start_install" from="Hexahedron" to="VBoxContainer/HATVersion" method="_on_hexahedron_start_install"]
